c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_mod.c
int main(void) {
    int to_mod = 5;
    to_mod %= 3;
    return to_mod;
}