c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/invalid_type.c
int main(void) {
    ints a = 1;
    return a;
}